Project builds now with Java 11 and maven 3.6.0.