@@ -8,7 +8,7 @@
  * You must accept the terms of that agreement to use this software.
  * ====================================================================
  *
- * 
+ *
  */
 package net.sf.wcfart.wcf.format;
 
@@ -23,28 +23,28 @@ public class IntegerHandler extends NumberHandler {
 
   public Object parse(String s, String userPattern) throws FormatException {
     Number n = (Number) super.parse(s, userPattern);
-    return new Integer(n.intValue());
+    return Integer.valueOf(n.intValue());
   }
 
   public boolean canHandle(Object value) {
     return value instanceof Integer;
   }
-  
+
   public Object toNativeArray(List<Object> list) {
     int[] array = new int[list.size()];
     for (int i = 0; i < array.length; i++)
       array[i] = ((Number)list.get(i)).intValue();
     return array;
   }
-  
+
   public Object[] toObjectArray(Object value) {
   	if (value instanceof Integer)
   	  return new Integer[]{(Integer)value};
   	int[] src = (int[])value;
     Integer[] dst = new Integer[src.length];
     for (int i = 0; i < src.length; i++)
-      dst[i] = new Integer(src[i]);
+      dst[i] = Integer.valueOf(src[i]);
     return dst;
   }
-  
+
 }
